--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
         <header>
             <div class="logo">
-                <img class="img-logo" src="/assets/img/logo.png " alt="logo ">
+                <img class="img-logo" src="img/logo.png " alt="logo ">
                 <h1 class="logo ">ENCRYPTED </h1>
             </div>
             <nav class="navbar ">
@@ -37,9 +37,9 @@
 
 
             <div class="start-container ">
-                <img src="/assets/img/field-agent.png " alt="field-agent " class="spies-img ">
+                <img src="img/field-agent.png " alt="field-agent " class="spies-img ">
                 <button class="button " id="Start ">START</button>
-                <img src="/assets/img/intelligencer.png " alt="intelligencer " class="spies-img ">
+                <img src="img/intelligencer.png " alt="intelligencer " class="spies-img ">
             </div>
 
 
