--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
         </section>
         <footer>
             <p>&copy; 2022 Jefferson Dias</p>
+            <p><a class="lucas-samuel" href="">Prof. Lucas Samuel</a></p>
             <ul>
                 <li><a href="https://www.linkedin.com/in/jeffersondias-dev/ ">LinkedIn</a></li>
                 <li><a href="https://github.com/jefferson-dias" target="_blank">Github</a></li>
