fixed import js

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         </div>
 
         <!--import pop-up-js -->
-        <script src="../js/pop-up.js"></script>
+        <script src="js/pop-up.js"></script>
 
     </main>
 </body>
