fixed responsive css

--- a/index.html
+++ b/index.html
@@ -15,38 +15,37 @@
 </head>
 
 <body>
-    <main class="container">
+    <main>
 
         <header>
             <div class="logo">
-                <img class="img-logo" src="img/logo.png " alt="logo ">
-                <h1 class="logo ">ENCRYPTED </h1>
-            </div>
-            <nav class="navbar ">
-                <ul>
-                    <li><a href="#">Rules</a></li>
-                    <li><a href="#">About</a></li>
+                <img class="logo-img" src="img/logo.png " alt="Encrypted">
+                <h1 class="logo-text">ENCRYPTED </h1>
 
-                </ul>
-            </nav>
+            </div>
+
+            <ul class="navbar">
+                <li><a href="#">Rules</a></li>
+                <li><a href="#">About</a></li>
+            </ul>
         </header>
 
-        <section>
+        <section class="start-container">
 
             <h2>ENCRYPTED</h2>
 
 
-            <div class="start-container ">
-                <img src="img/field-agent.png " alt="field-agent " class="field-agent-img" id="field-agent">
-                <button class="button " id="Start ">START</button>
-                <img src="img/intelligencer.png " alt="intelligencer " class="intelligencer-img" id="intelligencer">
+            <div class="start-content ">
+                <img src="img/field-agent.png " alt="field-agent " class="spies-img" id="field-agent">
+                <button class="button-start" id="Start ">START</button>
+                <img src="img/intelligencer.png " alt="intelligencer " class="spies-img" id="intelligencer">
             </div>
 
 
         </section>
         <footer>
             <p>&copy; 2022 Jefferson Dias</p>
-            <p><a class="lucas-samuel" href="">Prof.Lucas</a></p>
+            <p><a class="prof-lucas" href="">Prof.Lucas</a></p>
             <ul>
                 <li><a href="https://www.linkedin.com/in/jeffersondias-dev/ ">LinkedIn</a></li>
                 <li><a href="https://github.com/jefferson-dias" target="_blank">Github</a></li>
@@ -78,7 +77,6 @@
 
         <!--import pop-up-js -->
         <script src="js/pop-up.js"></script>
-
     </main>
 </body>
 
