--- a/index.html
+++ b/index.html
@@ -53,6 +53,8 @@
             </ul>
 
         </footer>
+
+        <!-- pop-up rules -->
         <div id="pop-up-intelligencer" class="pop-up-intelligencer">
             <div class="pop-up-intelligencer-content">
                 <img src="img/intelligencer.png " alt="intelligencer" class="rules-spies-img" id="rules-intelligence">
@@ -76,8 +78,11 @@
             </div>
         </div>
 
+        <!-- menu hamburguer -->
+
+
         <!--import pop-up-js -->
-        <script src="js/pop-up.js"></script>
+        <script src="js/pop-up.js "></script>
     </main>
 </body>
 
