finish button menu-hamburger

--- a/index.html
+++ b/index.html
@@ -19,16 +19,28 @@
     <main>
 
         <header>
+
             <div class="logo">
                 <img class="logo-img" src="img/logo.png " alt="Encrypted">
                 <h1 class="logo-text">ENCRYPTED </h1>
 
             </div>
-
-            <ul class="navbar">
-                <li><a href="#">Rules</a></li>
-                <li><a href="#">About</a></li>
-            </ul>
+            <nav>
+                <ul class="navbar">
+                    <li><a href="#">Rules</a></li>
+                    <li><a href="#">About</a></li>
+                </ul>
+            </nav>
+            <!-- menu hamburguer -->
+            <div class="menu-hamburger">
+                <div class="menu-hamburger-content">
+                    <ul>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                    </ul>
+                </div>
+            </div>
         </header>
 
         <section class="start-container">
@@ -46,7 +58,7 @@
         </section>
         <footer>
             <p>&copy; 2022 Jefferson Dias</p>
-            <p><a class="prof-lucas" href="">Prof.Lucas</a></p>
+            <p><a class="prof-lucas" href="#">Prof.Lucas</a></p>
             <ul>
                 <li><a href="https://www.linkedin.com/in/jeffersondias-dev/ ">LinkedIn</a></li>
                 <li><a href="https://github.com/jefferson-dias" target="_blank">Github</a></li>
@@ -78,7 +90,6 @@
             </div>
         </div>
 
-        <!-- menu hamburguer -->
 
 
         <!--import pop-up-js -->
