--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 <img src="img/field-agent.png " alt="field-agent" class="rules-spies-img" id="rules-field-agent">
                 <h2>Field Agent</h2>
                 <p>
-                    This spy has to find the right gates, choosing the word cards that has the color from his team, using the intelligencer encrypted messages
+                    This spy has to find the right gates, choosing the word cards that has the color from his team, using the inteligencer encrypted messages
 
                 </p>
                 <button class="close-button-field-agent" id="close-field-agent">Close</button>
