--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
     <main>
 
-        <section class="top-nav">
+        <header class="top-nav">
             <div class="logo">
                 <a href="index.html">
                     <img src="img/logo.png" alt="logo">
@@ -33,8 +33,9 @@
                 <li><a href="#">Rules</a></li>
                 <li><a href="#">About</a></li>
             </ul>
-        </section>
+        </header>
 
+        <canvas id="canvas" width="500" height="200"></canvas>
         <section class="start-container">
 
             <h2>ENCRYPTED</h2>
@@ -42,8 +43,7 @@
 
             <div class="start-content ">
                 <img src="img/field-agent.png " alt="field-agent " class="spies-img" id="field-agent">
-                <button class="button-start" id="Start ">START</button>
-                <img src="img/intelligencer.png " alt="intelligencer " class="spies-img" id="intelligencer">
+                <a href="table.html"> <button class="button-start" id="Start ">START</button></a> <img src="img/intelligencer.png " alt="intelligencer " class="spies-img" id="intelligencer">
             </div>
 
 
@@ -86,6 +86,8 @@
 
         <!--import pop-up-js -->
         <script src="js/pop-up.js "></script>
+        <!-- import drawMatrix.js -->
+        <script src="js/drawMatrix.js "></script>
     </main>
 </body>
 
