--- a/table.html
+++ b/table.html
@@ -5,13 +5,29 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Game Table</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Fira+Code:wght@300;500&family=Press+Start+2P&display=swap" rel="stylesheet">
+
+    <!-- import table.css -->
+    <link rel="stylesheet" href="css/table.css">
+
+    <title>Encrypted</title>
 </head>
 
 <body>
-    <section>
+    <main>
+        <canvas width="500" height="200" id="canvas"></canvas>
 
-    </section>
+
+
+
+
+
+
+        <!--import drawMatrix.js -->
+        <script src="js/drawMatrix.js"></script>
+    </main>
 </body>
 
 </html>
