--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
             <p>&copy; 2022 Jefferson Dias</p>
             <p><a class="prof-lucas" href="#">Prof.Lucas</a></p>
             <ul>
-                <li><a href="https://www.linkedin.com/in/jeffersondias-dev/ ">LinkedIn</a></li>
-                <li><a href="https://github.com/jefferson-dias" target="_blank">Github</a></li>
+                <li><a href="#">Instagram</a></li>
+
             </ul>
 
         </footer>
