create the components header, logo, menu

--- a/index.html
+++ b/index.html
@@ -9,16 +9,19 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Fira+Code:wght@300;500&family=Press+Start+2P&display=swap" rel="stylesheet">
-    <!-- import styles.css -->
+    
     <link rel="stylesheet" href="css/styles.css">
-
+    <link rel="stylesheet" href="css/reset.css".css">
+    <link rel="stylesheet" href="css/components/header.css">
+    <link rel="stylesheet" href="css/components/logo.css">
+    <link rel="stylesheet" href="css/components/menu.css">
     <title>Encrypted</title>
 </head>
 
 <body>
     <main>
 
-        <header class="top-nav">
+        <header class="header">
             <div class="logo">
                 <a href="index.html">
                     <img src="img/logo.png" alt="logo">
@@ -82,13 +85,11 @@
             </div>
         </div>
 
-
-
-        <!--import pop-up-js -->
-        <script src="js/pop-up.js "></script>
-        <!-- import drawMatrix.js -->
-        <script src="js/drawMatrix.js "></script>
     </main>
+    <!--import pop-up-js -->
+    <script src="js/pop-up.js "></script>
+    <!-- import drawMatrix.js -->
+    <script src="js/drawMatrix.js "></script>
 </body>
 
 </html>
