--- a/table.html
+++ b/table.html
@@ -17,17 +17,13 @@
 
 <body>
     <main>
-        <canvas id="canvas"></canvas>
-
-
-
-
-
-
-
-        <!--import drawMatrix.js -->
-        <script src="js/drawMatrix.js"></script>
+        <div class="center">
+            <canvas id="canvas"></canvas>
+        </div>
+            
     </main>
+    <!--import drawMatrix.js -->
+    <script src="js/drawMatrix.js"></script>
 </body>
 
 </html>
