--- a/index.html
+++ b/index.html
@@ -15,6 +15,13 @@
     <link rel="stylesheet" href="css/components/header.css">
     <link rel="stylesheet" href="css/components/logo.css">
     <link rel="stylesheet" href="css/components/menu.css">
+    <link rel="stylesheet" href="css/components/canvas.css">
+    <link rel="stylesheet" href="css/components/spies-img.css">
+    <link rel="stylesheet" href="css/components/start-container.css">
+    <link rel="stylesheet" href="css/components/footer.css">
+    <link rel="stylesheet" href="css/components/button.css">
+    <link rel="stylesheet" href="css/components/pop-up.css">
+    <link rel="stylesheet" href="css/components/title.css">
     <title>Encrypted</title>
 </head>
 
@@ -46,11 +53,14 @@
 
             <div class="start-content ">
                 <img src="img/field-agent.png " alt="field-agent " class="spies-img" id="field-agent">
-                <a href="table.html"> <button class="button-start" id="Start ">START</button></a> <img src="img/intelligencer.png " alt="intelligencer " class="spies-img" id="intelligencer">
+                <a href="table.html"> <button class="button-start" id="Start ">START</button></a> 
+                <img src="img/intelligencer.png " alt="intelligencer " class="spies-img" id="intelligencer">
             </div>
 
 
         </section>
+    <!-- footer 
+
         <footer>
             <p>&copy; 2022 Jefferson Dias</p>
             <p><a class="prof-lucas" href="#">Prof.Lucas</a></p>
@@ -58,9 +68,10 @@
                 <li><a href="#">Instagram</a></li>
 
             </ul>
-
+            
         </footer>
-
+        
+    -->
         <!-- pop-up rules -->
         <div id="pop-up-intelligencer" class="pop-up-intelligencer">
             <div class="pop-up-intelligencer-content">
