create the function rulesWriter

--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
       rel="stylesheet"
     />
 
-    <link rel="stylesheet" href="css/styles.css" />
     <link rel="stylesheet" href="css/reset.css"/>
     <link rel="stylesheet" href="css/components/header.css" />
     <link rel="stylesheet" href="css/components/logo.css" />
@@ -91,7 +90,7 @@
             id="rules-intelligence"
           />
           <h2>Intelligencer</h2>
-          <p class="rulesWriter">
+          <p id="rulesWriter-intelligencer" class="rulesWriter">
             This spy already knows where all the colors and answers are, and he
             must tell it, by saying only one word (not belonging from the board)
             to the field agent
@@ -111,7 +110,7 @@
             id="rules-field-agent"
           />
           <h2>Field Agent</h2>
-          <p class="rulesWrihter">
+          <p id="rulesWriter-field-agent" class="rulesWriter">
             This spy has to find the right gates, choosing the word cards that
             has the color from his team, using the inteligencer encrypted
             messages
