edit popup components

--- a/index.html
+++ b/index.html
@@ -83,14 +83,17 @@
       <!-- pop-up rules -->
       <div id="pop-up-intelligencer" class="pop-up-intelligencer">
         <div class="pop-up-intelligencer-content">
-          <img
+          <div>
+
+            <img
             src="img/intelligencer.png "
             alt="intelligencer"
             class="rules-spies-img"
             id="rules-intelligence"
-          />
-          <h2>Intelligencer</h2>
-          <p id="rulesWriter-intelligencer" class="rulesWriter">
+            />
+            <h2>Intelligencer</h2>
+          </div>
+            <p id="rulesWriter-intelligencer" class="rulesWriter">
             This spy already knows where all the colors and answers are, and he
             must tell it, by saying only one word (not belonging from the board)
             to the field agent
@@ -103,13 +106,16 @@
 
       <div id="pop-up-field-agent" class="pop-up-field-agent">
         <div class="pop-up-field-agent-content">
-          <img
+          <div>
+
+            <img
             src="img/field-agent.png "
             alt="field-agent"
             class="rules-spies-img"
             id="rules-field-agent"
-          />
-          <h2>Field Agent</h2>
+            />
+            <h2>Field Agent</h2>
+          </div>
           <p id="rulesWriter-field-agent" class="rulesWriter">
             This spy has to find the right gates, choosing the word cards that
             has the color from his team, using the inteligencer encrypted
