--- a/index.html
+++ b/index.html
@@ -94,9 +94,7 @@
             <h2>Intelligencer</h2>
           </div>
             <p id="rulesWriter-intelligencer" class="rulesWriter">
-            This spy already knows where all the colors and answers are,
-            and he must tell it, 
-            by saying only one word (not belonging from the board) to the field agent.
+            This spy already knows where all the colors and answers are, and he must tell it, by saying only one word (not belonging from the board) to the field agent.
           </p>
           <button class="close-button-intelligencer" id="close-intelligencer">
             Close
@@ -117,9 +115,7 @@
             <h2>Field Agent</h2>
           </div>
           <p id="rulesWriter-field-agent" class="rulesWriter">
-            This spy has to find the right gates, 
-            choosing the word cards that has the color from his team, 
-            using the inteligencer encrypted messages.
+            This spy has to find the right gates, choosing the word cards that has the color from his team, using the inteligencer encrypted messages.
           </p>
           <button class="close-button-field-agent" id="close-field-agent">
             Close
